[gd_scene load_steps=6 format=3 uid="uid://c3km10ul4olx"]

[ext_resource type="Script" path="res://scenes/enemies/crush_trap.gd" id="1_px3he"]
[ext_resource type="Texture2D" uid="uid://cblwa73nbfkcl" path="res://textures/floor/floormisc.png" id="2_a34p1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltchb"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i1mh"]
size = Vector2(640, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lxexp"]
size = Vector2(128, 640)

[node name="CrushTrap" type="CharacterBody2D"]
z_index = 4
script = ExtResource("1_px3he")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_a34p1")
hframes = 8
vframes = 8
frame = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ltchb")

[node name="LeftArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea2D"]
position = Vector2(-384, 0)
shape = SubResource("RectangleShape2D_6i1mh")

[node name="RightArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea2D"]
position = Vector2(384, 0)
shape = SubResource("RectangleShape2D_6i1mh")

[node name="UpArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpArea2D"]
position = Vector2(0, -384)
shape = SubResource("RectangleShape2D_lxexp")

[node name="DownArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownArea2D"]
position = Vector2(0, 384)
shape = SubResource("RectangleShape2D_lxexp")
